get rid of create-react-app

--- a/app/package.json
+++ b/app/package.json
@@ -2,40 +2,52 @@
     "name": "@tapestrydao/app",
     "version": "0.1.0",
     "repository": "https://github.com/TapestryDAO/tapestry",
+    "main": "./src/index.tsx",
     "scripts": {
         "clean": "shx rm -rf build/*",
-        "start": "craco start",
-        "build": "yarn clean && craco build",
-        "test": "craco test",
-        "analyze": "source-map-explorer 'build/static/js/*.js'"
+        "start": "webpack serve --config webpack/webpack.config.js --env env=dev"
     },
     "dependencies": {
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
         "@metaplex-foundation/mpl-core": "^0.0.2",
         "@mui/material": "^5.2.7",
+        "@solana/buffer-layout": "^4.0.0",
         "@solana/spl-token": "^0.1.8",
         "@solana/wallet-adapter-base": "^0.9.1",
         "@solana/wallet-adapter-react": "^0.15.1",
         "@solana/wallet-adapter-react-ui": "^0.9.1",
         "@solana/wallet-adapter-wallets": "^0.14.1",
         "@solana/web3.js": "^1.20.0",
+        "buffer": "^6.0.3",
         "react": "^17.0.0",
         "react-dom": "^17.0.0",
         "react-hot-toast": "^2.1.1",
-        "react-split-pane": "^0.1.92"
+        "react-split-pane": "^0.1.92",
+        "stream-browserify": "^3.0.0"
     },
     "devDependencies": {
-        "@craco/craco": "^6.0.0",
+        "@babel/core": "^7.16.7",
+        "@babel/preset-env": "^7.16.8",
+        "@babel/preset-react": "^7.16.7",
+        "@babel/preset-typescript": "^7.16.7",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "@types/styled-components": "^5.1.19",
+        "assert": "^2.0.0",
+        "babel-loader": "^8.2.3",
+        "css-loader": "^6.5.1",
         "eslint-config-react-app": "^6.0.0",
-        "react-scripts": "^4.0.0",
-        "shx": "^0.3.3",
-        "source-map-explorer": "^2.5.2",
+        "html-webpack-plugin": "^5.5.0",
+        "react-dev-utils": "^12.0.0",
+        "react-refresh": "^0.11.0",
+        "style-loader": "^3.3.1",
         "typescript": "~4.4.4",
+        "webpack": "^5.66.0",
+        "webpack-cli": "^4.9.1",
+        "webpack-dev-server": "^4.7.3",
         "yarn": "^1.22.0"
     },
     "eslintConfig": {
