--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,4 +1,29 @@
 {
+    "compilerOptions": {
+        "target": "es2021" /* https://www.typescriptlang.org/tsconfig#target */,
+        "module": "commonjs" /* https://www.typescriptlang.org/tsconfig#module */,
+        "moduleResolution": "node" /* https://www.typescriptlang.org/tsconfig#moduleResolution */,
+        "lib": [
+            "DOM",
+            "ESNext"
+        ] /* https://www.typescriptlang.org/tsconfig#lib */,
+        "jsx": "react-jsx",
+        "noEmit": true /* https://www.typescriptlang.org/tsconfig#noEmit */,
+        "isolatedModules": true /* https://www.typescriptlang.org/tsconfig#isolatedModules */,
+        "esModuleInterop": true /* https://www.typescriptlang.org/tsconfig#esModuleInterop */,
+        "strict": true /* https://www.typescriptlang.org/tsconfig#strict */,
+        "skipLibCheck": true /* https://www.typescriptlang.org/tsconfig#skipLibCheck */,
+        "forceConsistentCasingInFileNames": true /* https://www.typescriptlang.org/tsconfig#forceConsistentCasingInFileNames */,
+        "resolveJsonModule": true /* https://www.typescriptlang.org/tsconfig#resolveJsonModule */,
+        // "allowJs": true /* Allow javascript files to be compiled. Useful when migrating JS to TS */,
+        // "checkJs": true /* Report errors in .js files. Works in tandem with allowJs. */,
+    },
+    "include": [
+        "src/**/*"
+    ]
+}
+/* Old
+{
     "include": [
         "src"
     ],
@@ -24,3 +49,4 @@
         "jsx": "react-jsx"
     }
 }
+*/
