--- a/package.json
+++ b/package.json
@@ -17,5 +17,7 @@
     "localnet:up": "solana-test-validator --bpf-program Tapestry11111111111111111111111111111111111 program/target/deploy/solana_tapestry.so --reset",
     "localnet:logs": "solana logs -u localhost"
   },
-  "dependencies": {}
+  "dependencies": {
+    "yarn": "^1.22.17"
+  }
 }
