--- a/app/package.json
+++ b/app/package.json
@@ -5,8 +5,9 @@
     "main": "./src/index.tsx",
     "scripts": {
         "clean": "shx rm -rf build/*",
-        "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
-        "build": "webpack --config webpack/webpack.config.js --env env=prod"
+        "builddeps": "cd ../client && yarn build",
+        "start": "yarn builddeps && webpack serve --config webpack/webpack.config.js --env env=dev",
+        "build": "yarn builddeps && webpack --config webpack/webpack.config.js --env env=prod"
     },
     "dependencies": {
         "@emotion/react": "^11.7.1",
@@ -39,6 +40,7 @@
         "@types/styled-components": "^5.1.19",
         "assert": "^2.0.0",
         "babel-loader": "^8.2.3",
+        "babel-plugin-module-resolver": "^4.1.0",
         "css-loader": "^6.5.1",
         "eslint-config-react-app": "^6.0.0",
         "html-webpack-plugin": "^5.5.0",
