vscode finds the module

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -17,8 +17,14 @@
         "resolveJsonModule": true /* https://www.typescriptlang.org/tsconfig#resolveJsonModule */,
         // "allowJs": true /* Allow javascript files to be compiled. Useful when migrating JS to TS */,
         // "checkJs": true /* Report errors in .js files. Works in tandem with allowJs. */,
+        "baseUrl": "../",
+        "paths": {
+            "@tapestrydao/client": [
+                "client/build"
+            ],
+        }
     },
     "include": [
         "src/**/*"
-    ]
+    ],
 }
