--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -4,7 +4,8 @@
         "target": "es2021",
         "declaration": true,
         "outDir": "./build",
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "sourceMap": true
     },
     "include": [
         "src/**/*"
