--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
   },
   "dependencies": {
     "yarn": "^1.22.17"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.8",
+    "@types/yargs": "^17.0.8",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4",
+    "yargs": "^17.3.1"
   }
 }
