--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "yarn": "^1.22.17"
   },
   "devDependencies": {
+    "@solana/web3.js": "^1.31.0",
     "@types/node": "^17.0.8",
     "@types/yargs": "^17.0.8",
     "ts-node": "^10.4.0",
