--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@solana/web3.js": "^1.31.0",
     "@types/node": "^17.0.8",
     "@types/yargs": "^17.0.8",
+    "axios": "^0.24.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
     "yargs": "^17.3.1"
