--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
         "@solana/wallet-adapter-react-ui": "^0.9.1",
         "@solana/wallet-adapter-wallets": "^0.14.1",
         "@solana/web3.js": "^1.20.0",
+        "bs58": "^4.0.1",
         "buffer": "^6.0.3",
         "react": "^17.0.0",
         "react-dom": "^17.0.0",
@@ -34,6 +35,7 @@
         "@babel/preset-react": "^7.16.7",
         "@babel/preset-typescript": "^7.16.7",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
+        "@types/bs58": "^4.0.1",
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
