--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "localnet:logs": "solana logs -u localhost"
   },
   "dependencies": {
+    "bs58": "^4.0.1",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@solana/web3.js": "^1.31.0",
+    "@types/bs58": "^4.0.1",
     "@types/node": "^17.0.8",
     "@types/yargs": "^17.0.8",
     "axios": "^0.24.0",
