--- a/app/package.json
+++ b/app/package.json
@@ -23,9 +23,11 @@
         "@solana/web3.js": "^1.20.0",
         "bs58": "^4.0.1",
         "buffer": "^6.0.3",
+        "konva": "^8.3.2",
         "react": "^17.0.0",
         "react-dom": "^17.0.0",
         "react-hot-toast": "^2.1.1",
+        "react-konva": "^17.0.2-5",
         "react-split-pane": "^0.1.92",
         "stream-browserify": "^3.0.0"
     },
