--- a/app/package.json
+++ b/app/package.json
@@ -29,7 +29,8 @@
         "react-hot-toast": "^2.1.1",
         "react-konva": "^17.0.2-5",
         "react-split-pane": "^0.1.92",
-        "stream-browserify": "^3.0.0"
+        "stream-browserify": "^3.0.0",
+        "type-signals": "^1.1.0"
     },
     "devDependencies": {
         "@babel/core": "^7.16.7",
