--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
         "@solana/buffer-layout": "^4.0.0",
         "@solana/spl-token": "^0.1.8",
         "@solana/web3.js": "^1.20.0",
-        "buffer": "^6.0.3"
+        "buffer": "^6.0.3",
+        "type-signals": "^1.1.0"
     },
     "devDependencies": {
         "shx": "^0.3.4",
