fix cli and remove dead code

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "app:build": "cd app && yarn build",
     "app:start": "cd app && yarn start",
     "localnet:up": "solana-test-validator --bpf-program Tapestry11111111111111111111111111111111111 program/target/deploy/solana_tapestry.so",
-    "localnet:logs": "solana logs -u localhost"
+    "localnet:logs": "solana logs -u localhost",
+    "alljs:build": "yarn client:build && yarn app:build && tap --help"
   },
   "dependencies": {
     "bs58": "^4.0.1",
