--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -6,20 +6,22 @@ license = "WTFPL"
 publish = false
 
 [dependencies]
-solana-program = "1.9.2"
-solana-validator = { version = "1.9.2", optional = true }
+solana-program = "1.9.5"
+solana-validator = { version = "1.9.5", optional = true }
 spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
 spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
 thiserror = "1.0.24"
 arrayref = "0.3.6"
 borsh = "0.9.1"
+mpl-token-metadata = {path="../build/custom_deps/mpl-program-library/token-metadata/program", features = ["no-entrypoint"]}
+mpl-auction = {path="../build/custom_deps/mpl-program-library/auction/program", features = ["no-entrypoint"]}
 
 [features]
 test-bpf = ["solana-validator"]
 
 [dev-dependencies]
 assert_matches = "1.5.0"
-solana-program-test = "1.9.2"
+solana-program-test = "1.9.5"
 solana-sdk = "1.9.2"
 
 [lib]
