--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@metaplex-foundation/mpl-core": "^0.0.2",
+        "@metaplex-foundation/mpl-token-metadata": "^1.1.0",
         "@solana/buffer-layout": "^4.0.0",
         "@solana/spl-token": "^0.1.8",
         "@solana/web3.js": "^1.20.0",
