--- a/tapestry_watcher/Cargo.toml
+++ b/tapestry_watcher/Cargo.toml
@@ -10,6 +10,7 @@ solana-shadow = "*"
 solana-tapestry = { path = "../program", features= ["no-entrypoint"]}
 solana-sdk = "1.8.12"
 tokio = "1.15.0"
+borsh = "0.9.1"
 
 # [dependencies]
 # solana-client = "1.8.12"
