move tapestry stuff into tapestry directory

--- a/package.json
+++ b/package.json
@@ -8,21 +8,23 @@
   },
   "homepage": ".",
   "scripts": {
-    "setup": "yarn setupjs && yarn setuppy && yarn setuprs && yarn alljs:build",
-    "setuprs": "yarn meta:install && yarn program:build",
+    "setup": "yarn setupjs && yarn setuppy && yarn setuprs",
+    "setuprs": "yarn meta:install && yarn tap:prog:build",
     "setuppy": "poetry install",
-    "setupjs": "yarn install && cd app && yarn install && cd ../client && yarn install",
-    "verify": "yarn alljs:build && yarn program:build && yarn program:test",
-    "program:build": "cd program && cargo build-bpf",
-    "program:test": "cd program && cargo test-bpf",
-    "client:build": "cd client && yarn build",
-    "client:test": "cd client && yarn test",
-    "app:build": "cd app && yarn build",
-    "app:start": "cd app && yarn start",
+    "setupjs": "yarn install && yarn tap:client:setup && yarn tap:app:setup",
+    "tap:build": "yarn tap:prog:build && yarn tap:client:build && yarn tap:app:build",
+    "tap:test": "yarn tap:prog:test && echo \"You should probably make more tests...\"",
+    "tap:prog:build": "cd tapestry/program && cargo build-bpf",
+    "tap:prog:test": "cd tapestry/program && cargo test-bpf",
+    "tap:client:setup": "cd tapestry/client && yarn install",
+    "tap:client:build": "cd tapestry/client && yarn build",
+    "tap:client:testt": "cd tapestry/cient && yarn test",
+    "tap:app:setup": "cd tapestry/app && yarn install",
+    "tap:app:build": "cd tapestry/app && yarn build",
+    "tap:app:start": "cd tapestry/app && yarn start",
     "localnet:fresh": "python -u scripts/fresh_validator.py",
     "localnet:up": "python -u scripts/start_test_validator.py",
     "localnet:logs": "solana logs -u localhost",
-    "alljs:build": "yarn client:build && yarn app:build && tap --help",
     "meta:install": "python -u scripts/custom_deps.py"
   },
   "dependencies": {
