--- a/tapestry/program/Cargo.toml
+++ b/tapestry/program/Cargo.toml
@@ -13,8 +13,8 @@ spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
 thiserror = "1.0.24"
 arrayref = "0.3.6"
 borsh = "0.9.1"
-mpl-token-metadata = {path="../build/custom_deps/mpl-program-library/token-metadata/program", features = ["no-entrypoint"]}
-mpl-auction = {path="../build/custom_deps/mpl-program-library/auction/program", features = ["no-entrypoint"]}
+mpl-token-metadata = {path="../../build/custom_deps/mpl-program-library/token-metadata/program", features = ["no-entrypoint"]}
+mpl-auction = {path="../../build/custom_deps/mpl-program-library/auction/program", features = ["no-entrypoint"]}
 
 [features]
 test-bpf = ["solana-validator"]
