--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   },
   "dependencies": {
     "bs58": "^4.0.1",
+    "jimp": "^0.16.1",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@solana/web3.js": "^1.31.0",
     "@types/bs58": "^4.0.1",
+    "@types/jimp": "^0.2.28",
     "@types/node": "^17.0.8",
     "@types/yargs": "^17.0.8",
     "axios": "^0.24.0",
