--- a/tapestry/timp/package.json
+++ b/tapestry/timp/package.json
@@ -12,9 +12,11 @@
         "build": "tsc"
     },
     "dependencies": {
+        "gif.js": "^0.2.0",
         "jimp": "^0.16.1"
     },
     "devDependencies": {
+        "@types/gif.js": "^0.2.2",
         "@types/jimp": "^0.2.28",
         "shx": "^0.3.4",
         "typescript": "~4.4.4",
