--- a/package.json
+++ b/package.json
@@ -27,12 +27,11 @@
     "localnet:logs": "solana logs -u localhost",
     "meta:install": "python -u scripts/custom_deps.py"
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "bs58": "^4.0.1",
     "jimp": "^0.16.1",
-    "yarn": "^1.22.17"
-  },
-  "devDependencies": {
+    "yarn": "^1.22.17",
     "@solana/web3.js": "^1.31.0",
     "@types/bs58": "^4.0.1",
     "@types/jimp": "^0.2.28",
