--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "setup": "yarn setupjs && yarn setuppy && yarn setuprs",
     "setuprs": "yarn meta:install --build && yarn tap:prog:build && yarn meta:install --deploy",
     "setuppy": "poetry install",
-    "setupjs": "yarn install && yarn tap:client:setup && yarn tap:app:setup",
+    "setupjs": "yarn install && yarn tap:client:setup && yarn tap:app:setup && yarn place:client:setup",
     "place:prog:build": "cd place/program && cargo build-bpf",
     "place:prog:test": "cd place/program && cargo test-bpf",
+    "place:client:build": "cd place/client && yarn build",
+    "place:client:setup": "cd place/client && yarn install",
     "tap:build": "yarn tap:prog:build && yarn tap:client:build && yarn tap:app:build",
     "tap:test": "yarn tap:prog:test && echo \"You should probably make more tests...\"",
     "tap:prog:build": "cd tapestry/program && cargo build-bpf",
