--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "place:prog:test": "cd place/program && cargo test-bpf",
     "place:client:build": "cd place/client && yarn build",
     "place:client:setup": "cd place/client && yarn install",
+    "place:app:setup": "cd place/app && yarn install",
+    "place:app:build": "cd place/app && yarn build",
+    "place:app:start": "cd place/app && yarn start",
     "tap:build": "yarn tap:prog:build && yarn tap:client:build && yarn tap:app:build",
     "tap:test": "yarn tap:prog:test && echo \"You should probably make more tests...\"",
     "tap:prog:build": "cd tapestry/program && cargo build-bpf",
