fix setup/build issues

--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
   "homepage": ".",
   "scripts": {
     "setup": "yarn setupjs && yarn setuppy && yarn setuprs",
-    "setuprs": "yarn meta:install --build && yarn tap:prog:build && yarn meta:install --deploy",
+    "setuprs": "yarn meta:install --build && yarn rust:build && yarn meta:install --deploy",
     "setuppy": "poetry install",
-    "setupjs": "yarn install && yarn tap:client:setup && yarn tap:app:setup && yarn place:client:setup",
-    "place:prog:build": "cd place/program && cargo build-bpf",
-    "place:prog:test": "cd place/program && cargo test-bpf",
+    "setupjs": "yarn install && yarn tap:client:setup && yarn tap:app:setup && yarn place:client:setup && yarn place:app:setup && yarn timp:app:setup",
+    "rust:build": "cargo build-bpf",
+    "rust:test": "cargo test-bpf",
     "place:client:build": "cd place/client && yarn build",
     "place:client:setup": "cd place/client && yarn install",
     "place:app:setup": "cd place/app && yarn install",
     "place:app:build": "cd place/app && yarn build",
     "place:app:start": "cd place/app && yarn start",
-    "tap:build": "yarn tap:prog:build && yarn tap:client:build && yarn tap:app:build",
-    "tap:test": "yarn tap:prog:test && echo \"You should probably make more tests...\"",
-    "tap:prog:build": "cd tapestry/program && cargo build-bpf",
-    "tap:prog:test": "cd tapestry/program && cargo test-bpf",
+    "timp:app:setup": "cd tapestry/timp && yarn install",
+    "timp:app:build": "cd tapestry/timp && yarn build",
+    "timp:app:start": "cd tapestry/timp && yarn start",
+    "tap:build": "yarn rust:build && yarn tap:client:build && yarn tap:app:build",
+    "tap:test": "yarn rust:test && echo \"You should probably make more tests...\"",
     "tap:client:setup": "cd tapestry/client && yarn install",
     "tap:client:build": "cd tapestry/client && yarn build",
     "tap:app:setup": "cd tapestry/app && yarn install",
