--- a/place/program/Cargo.toml
+++ b/place/program/Cargo.toml
@@ -8,6 +8,8 @@ publish = false
 [dependencies]
 solana-program = "1.8.12"
 solana-validator = { version = "1.8.12", optional = true }
+spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
+spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
 thiserror = "1.0.24"
 arrayref = "0.3.6"
 borsh = "0.9.1"
