--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "setuprs": "yarn meta:install --build && yarn rust:build && yarn meta:install --deploy",
     "setuppy": "poetry install",
     "setupjs": "yarn install && yarn tap:client:setup && yarn tap:app:setup && yarn place:client:setup && yarn place:app:setup && yarn timp:app:setup",
-    "rust:build": "cargo build-bpf",
-    "rust:test": "cargo test-bpf",
+    "rust:build": "yarn meta:install && cargo build-bpf",
+    "rust:test": "yarn meta:install && cargo test-bpf",
     "place:client:build": "cd place/client && yarn build",
     "place:client:setup": "cd place/client && yarn install",
     "place:app:setup": "cd place/app && yarn install",
