--- a/place/program/Cargo.toml
+++ b/place/program/Cargo.toml
@@ -13,6 +13,8 @@ spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
 thiserror = "1.0.24"
 arrayref = "0.3.6"
 borsh = "0.9.1"
+mpl-token-metadata = {path="../../build/custom_deps/mpl-program-library/token-metadata/program", features = ["no-entrypoint"]}
+
 
 [features]
 test-bpf = ["solana-validator"]
