--- a/place/app/package.json
+++ b/place/app/package.json
@@ -23,6 +23,7 @@
         "@solana/web3.js": "^1.20.0",
         "bs58": "^4.0.1",
         "buffer": "^6.0.3",
+        "crypto-browserify": "^3.12.0",
         "konva": "^8.3.2",
         "react": "^17.0.0",
         "react-dom": "^17.0.0",
