--- a/place/client/package.json
+++ b/place/client/package.json
@@ -17,8 +17,7 @@
         "@solana/buffer-layout": "^4.0.0",
         "@solana/spl-token": "^0.1.8",
         "@solana/web3.js": "^1.20.0",
-        "buffer": "^6.0.3",
-        "type-signals": "^1.1.0"
+        "buffer": "^6.0.3"
     },
     "devDependencies": {
         "shx": "^0.3.4",
