--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9.2"
 [tool.poetry.dev-dependencies]
 GitPython = "^3.1.26"
 pathlib = "^1.0.1"
+base58 = "^2.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
