--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.9.2"
 GitPython = "^3.1.26"
 pathlib = "^1.0.1"
 base58 = "^2.1.1"
+semver = "^2.13.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
