--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ GitPython = "^3.1.26"
 pathlib = "^1.0.1"
 base58 = "^2.1.1"
 semver = "^2.13.0"
+requests = "^2.27.1"
+tqdm = "^4.62.3"
+requests-toolbelt = "^0.9.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
