--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ GitPython = "^3.1.26"
 pathlib = "^1.0.1"
 base58 = "^2.1.1"
 semver = "^2.13.0"
+pre-commit = "^2.17.0"
+black = "20.8b1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
