--- a/tapestry/client/tsconfig.json
+++ b/tapestry/client/tsconfig.json
@@ -7,7 +7,5 @@
         "esModuleInterop": true,
         "sourceMap": true
     },
-    "include": [
-        "src/**/*"
-    ]
+    "include": ["src/**/*"]
 }
