--- a/place/program/Cargo.toml
+++ b/place/program/Cargo.toml
@@ -20,6 +20,7 @@ mpl-token-metadata = {path="../../build/custom_deps/mpl-program-library/token-me
 test-bpf = ["solana-validator"]
 no-entrypoint = []
 devnet = []
+mainnet = []
 
 [dev-dependencies]
 assert_matches = "1.5.0"
