--- a/place/app/package.json
+++ b/place/app/package.json
@@ -42,15 +42,19 @@
         "@types/react-dom": "^17.0.0",
         "@types/styled-components": "^5.1.19",
         "assert": "^2.0.0",
+        "autoprefixer": "^10.4.2",
         "babel-loader": "^8.2.3",
         "babel-plugin-module-resolver": "^4.1.0",
         "css-loader": "^6.5.1",
         "eslint-config-react-app": "^6.0.0",
         "html-webpack-plugin": "^5.5.0",
+        "postcss": "^8.4.7",
+        "postcss-loader": "^6.2.1",
         "react-dev-utils": "^12.0.0",
         "react-refresh": "^0.11.0",
         "shx": "^0.3.4",
         "style-loader": "^3.3.1",
+        "tailwindcss": "^3.0.23",
         "typescript": "~4.4.4",
         "webpack": "^5.66.0",
         "webpack-cli": "^4.9.2",
